[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/demo/blue_triangle_tile.png" type="Texture" id=1]
[ext_resource path="res://assets/demo/red_triangle_tile.png" type="Texture" id=2]
[ext_resource path="res://assets/demo/arrow.png" type="Texture" id=3]
[ext_resource path="res://scripts/DemoScene.gd" type="Script" id=4]
[ext_resource path="res://assets/demo/green_circle_tile.png" type="Texture" id=5]
[ext_resource path="res://assets/demo/green_rect_tile.png" type="Texture" id=6]
[ext_resource path="res://scenes/GameButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/demo/solved_puzzle_shape.png" type="Texture" id=8]
[ext_resource path="res://assets/demo/tick.png" type="Texture" id=9]
[ext_resource path="res://assets/demo/solved_puzzle_color.png" type="Texture" id=10]

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("SwipeLayer/CenterContainer/VBoxContainer/HBoxContainer2/GreenCircleTile:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SwipeLayer/CenterContainer/VBoxContainer/HBoxContainer2/GreenRectTile:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 293, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "swipe"
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SwipeLayer/CenterContainer/VBoxContainer/HBoxContainer/BlueTriangleTile:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 3, 4, 6 ),
"transitions": PoolRealArray( 1, -2, 1, -2, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 293, 0 ), Vector2( 293, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SwipeLayer/CenterContainer/VBoxContainer/HBoxContainer/RedTriangleTile:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 3, 4, 6 ),
"transitions": PoolRealArray( 1, -2, 1, -2, 1 ),
"update": 0,
"values": [ Vector2( 293, 0 ), Vector2( 293, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 293, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SwipeLayer/CenterContainer/VBoxContainer/HBoxContainer2/GreenCircleTile:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 3, 4, 6 ),
"transitions": PoolRealArray( 1, -2, 1, -2, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 293, 0 ), Vector2( 293, 0 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SwipeLayer/CenterContainer/VBoxContainer/HBoxContainer2/GreenRectTile:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1, 3, 4, 6 ),
"transitions": PoolRealArray( 1, -2, 1, -2, 1 ),
"update": 0,
"values": [ Vector2( 293, 0 ), Vector2( 293, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 293, 0 ) ]
}

[node name="DemoScene" type="Node"]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.0705882, 0.247059, 1 )

[node name="SwipeLayer" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="SwipeLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="SwipeLayer/CenterContainer"]
margin_left = 147.0
margin_top = 221.0
margin_right = 573.0
margin_bottom = 1059.0
custom_constants/separation = 215
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="SwipeLayer/CenterContainer/VBoxContainer"]
margin_right = 426.0
margin_bottom = 133.0
custom_constants/separation = 50
alignment = 1

[node name="BlueTriangleTile" type="TextureRect" parent="SwipeLayer/CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 133.0
margin_bottom = 133.0
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="SwipeLayer/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 183.0
margin_right = 243.0
margin_bottom = 133.0
custom_constants/separation = 25
alignment = 1

[node name="TextureRect" type="TextureRect" parent="SwipeLayer/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 60.0
margin_bottom = 54.0
texture = ExtResource( 3 )

[node name="TextureRect2" type="TextureRect" parent="SwipeLayer/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 79.0
margin_right = 60.0
margin_bottom = 105.0
texture = ExtResource( 3 )
flip_h = true

[node name="RedTriangleTile" type="TextureRect" parent="SwipeLayer/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 293.0
margin_right = 426.0
margin_bottom = 133.0
texture = ExtResource( 2 )

[node name="HBoxContainer2" type="HBoxContainer" parent="SwipeLayer/CenterContainer/VBoxContainer"]
margin_top = 348.0
margin_right = 426.0
margin_bottom = 481.0
custom_constants/separation = 50
alignment = 1

[node name="GreenCircleTile" type="TextureRect" parent="SwipeLayer/CenterContainer/VBoxContainer/HBoxContainer2"]
margin_right = 133.0
margin_bottom = 133.0
texture = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="SwipeLayer/CenterContainer/VBoxContainer/HBoxContainer2"]
margin_left = 183.0
margin_right = 243.0
margin_bottom = 133.0
custom_constants/separation = 25
alignment = 1

[node name="TextureRect" type="TextureRect" parent="SwipeLayer/CenterContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
modulate = Color( 1, 1, 1, 0.894118 )
margin_top = 28.0
margin_right = 60.0
margin_bottom = 54.0
texture = ExtResource( 3 )

[node name="TextureRect2" type="TextureRect" parent="SwipeLayer/CenterContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_top = 79.0
margin_right = 60.0
margin_bottom = 105.0
texture = ExtResource( 3 )
flip_h = true

[node name="GreenRectTile" type="TextureRect" parent="SwipeLayer/CenterContainer/VBoxContainer/HBoxContainer2"]
margin_left = 293.0
margin_right = 426.0
margin_bottom = 133.0
texture = ExtResource( 6 )

[node name="NextButton" parent="SwipeLayer/CenterContainer/VBoxContainer" instance=ExtResource( 7 )]
margin_top = 696.0
margin_right = 426.0
margin_bottom = 838.0
text = "NEXT"
color = Color( 0.0901961, 0.643137, 0.356863, 1 )

[node name="SolutionLayer" type="CanvasLayer" parent="."]
offset = Vector2( 720, 0 )
transform = Transform2D( 1, 0, 0, 1, 720, 0 )

[node name="CenterContainer" type="CenterContainer" parent="SolutionLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="SolutionLayer/CenterContainer"]
margin_left = 32.0
margin_top = 146.0
margin_right = 688.0
margin_bottom = 1133.0
custom_constants/separation = 200
alignment = 1

[node name="TextureRect" type="TextureRect" parent="SolutionLayer/CenterContainer/VBoxContainer"]
margin_right = 656.0
margin_bottom = 132.0
texture = ExtResource( 9 )
stretch_mode = 4

[node name="HBoxContainer" type="HBoxContainer" parent="SolutionLayer/CenterContainer/VBoxContainer"]
margin_top = 332.0
margin_right = 656.0
margin_bottom = 645.0
custom_constants/separation = 30
alignment = 1

[node name="TextureRect" type="TextureRect" parent="SolutionLayer/CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 313.0
margin_bottom = 313.0
texture = ExtResource( 8 )

[node name="TextureRect2" type="TextureRect" parent="SolutionLayer/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 343.0
margin_right = 656.0
margin_bottom = 313.0
texture = ExtResource( 10 )

[node name="PlayButton" parent="SolutionLayer/CenterContainer/VBoxContainer" instance=ExtResource( 7 )]
margin_top = 845.0
margin_right = 656.0
margin_bottom = 987.0
color = Color( 0.0901961, 0.643137, 0.356863, 1 )

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "swipe"
anims/RESET = SubResource( 4 )
anims/swipe = SubResource( 3 )

[connection signal="pressed" from="SwipeLayer/CenterContainer/VBoxContainer/NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="SolutionLayer/CenterContainer/VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
